create variables and header style

--- a/index.html
+++ b/index.html
@@ -9,10 +9,84 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;700&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="assets/images/nexytech-n-logo.svg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/icons/style.css" />
     <link rel="stylesheet" href="dist/css/main.css" />
     <script src="src/js/main.js" defer></script>
     <title>Nexytech</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__navigation container">
+        <div class="header__logo">
+          <a href="#">
+            <img src="assets/images/nexytech-n-logo.svg" alt="Nexytech Logo" />
+            <img
+              src="assets/images/nexytech-logo-complete.svg"
+              alt="Nexytech Logo"
+            />
+          </a>
+        </div>
+
+        <div class="header__menu">
+          <ul>
+            <li>
+              <a href="#">
+                <i class="home-icon"></i>
+                <span href="#">Início</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="about-icon"></i>
+                <span href="#">Sobre</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="services-icon"></i>
+                <span href="#">Serviços</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="team-icon"></i>
+                <span href="#">Time</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="testimonial-icon"></i>
+                <span href="#">Depoimentos</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="right-curved-arrow"></i>
+                <span href="#">Contato</span>
+              </a>
+            </li>
+          </ul>
+
+          <div class="header__button">
+            <a class="contact-button" href="#">Entrar em contato</a>
+          </div>
+        </div>
+
+        <div class="theme-switcher">
+          <span>Trocar tema</span>
+          <i class="moon-icon"></i>
+        </div>
+
+        <div class="header__menu--mobile">
+          <i class="mobile-menu-icon"></i>
+          <i class="close-icon"></i>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
