created the homepage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -73,7 +73,7 @@
           </ul>
 
           <div class="header__button">
-            <a class="contact-button" href="#">Entrar em contato</a>
+            <a class="button" href="#">Entrar em contato</a>
           </div>
         </div>
 
@@ -88,5 +88,81 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <section class="section" id="home">
+        <div class="container">
+          <div class="home__cta">
+            <div class="home__image">
+              <img
+                src="assets/images/home-image-left.png"
+                alt="Equipe trabalhando"
+              />
+              <img
+                src="assets/images/home-image-middle.png"
+                alt="Equipe trabalhando"
+              />
+              <img
+                src="assets/images/home-image-right.png"
+                alt="Equipe trabalhando"
+              />
+            </div>
+
+            <div class="home__text">
+              <h1 class="home__title">
+                Impulsionamos o crescimento através da tecnologia
+              </h1>
+
+              <div class="home__button">
+                <a href="#" class="button">
+                  Saiba mais <i class="straight-arrow-icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="home__cards card">
+            <div class="card__box process">
+              <div class="card__icon">
+                <i class="gear-icon"></i>
+              </div>
+
+              <h2 class="card__title">Processo De Desenvolvimento</h2>
+              <p class="card__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus
+                pellentesque quisque tincidunt amet, volutpat. Viverra
+                pellentesque faucibus vitae aliquam, dignissim.
+              </p>
+            </div>
+
+            <div class="card__box technologies">
+              <div class="card__icon">
+                <i class="tech-icon"></i>
+              </div>
+
+              <h2 class="card__title">Melhores Tecnologias</h2>
+              <p class="card__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus
+                pellentesque quisque tincidunt amet, volutpat. Viverra
+                pellentesque faucibus vitae aliquam, dignissim.
+              </p>
+            </div>
+
+            <div class="card__box agile">
+              <div class="card__icon">
+                <i class="rocket-icon"></i>
+              </div>
+
+              <h2 class="card__title">Entrega Agil</h2>
+              <p class="card__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus
+                pellentesque quisque tincidunt amet, volutpat. Viverra
+                pellentesque faucibus vitae aliquam, dignissim.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
