--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="assets/icons/style.css" />
-    <link rel="stylesheet" href="dist/css/main.css" />
+    <link rel="stylesheet" href="public/css/main.css" />
     <script src="src/js/main.js" defer></script>
     <title>Nexytech</title>
   </head>
@@ -160,6 +160,29 @@
                 pellentesque faucibus vitae aliquam, dignissim.
               </p>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="about">
+        <div class="container">
+          <div class="about__image">
+            <img src="assets/images/about-image.png" alt="Empresa" />
+          </div>
+
+          <div class="about__text">
+            <h2 class="about__title">
+              Empresa referência no mercado de desenvolvimento web e mobile
+            </h2>
+            <p class="about__paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              tellus viverra urna aliquam. Cursus habitasse amet, purus et.
+              Sollicitudin tristique pellentesque felis sem dui fermentum a
+              maecenas neque. Mattis placerat sodales orci sit. Risus purus
+              risus molestie viverra vel, hac cursus. Ac in venenatis eget et
+              eget blandit eget urna tortor. In dictum enim et suspendisse
+              elementum, convallis vulputate.
+            </p>
           </div>
         </div>
       </section>
