created service content section

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <i class="rocket-icon"></i>
               </div>
 
-              <h2 class="card__title">Entrega Agil</h2>
+              <h2 class="card__title">Entrega Ágil</h2>
               <p class="card__paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus
                 pellentesque quisque tincidunt amet, volutpat. Viverra
@@ -183,6 +183,58 @@
               eget blandit eget urna tortor. In dictum enim et suspendisse
               elementum, convallis vulputate.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="services">
+        <div class="container">
+          <div class="services__text">
+            <h2 class="services__title">Nossos serviços e especialidades</h2>
+            <p class="services__paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+          </div>
+
+          <div class="services__details">
+            <div class="services__box">
+              <i class="checkmark-icon"></i>
+              <span>Estratégia em SEO</span>
+            </div>
+
+            <div class="services__box">
+              <i class="checkmark-icon"></i>
+              <span>Otimização e Performance</span>
+            </div>
+          </div>
+
+          <div class="services__cards card">
+            <div class="card__box">
+              <i class="ux-ui-design-icon"></i>
+
+              <h2 class="card__title">UX/UI Design</h2>
+              <p class="card__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </div>
+
+            <div class="card__box">
+              <i class="front-end-icon"></i>
+
+              <h2 class="card__title">Front End</h2>
+              <p class="card__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </div>
+
+            <div class="card__box">
+              <i class="back-end-icon"></i>
+
+              <h2 class="card__title">Back End</h2>
+              <p class="card__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </div>
           </div>
         </div>
       </section>
