created preloading screen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
     <title>Nexytech</title>
   </head>
   <body>
+    <div class="preloading">
+      <div class="preloading__logo">
+        <img src="assets/images/nexytech-n-logo.svg" alt="Nexytech logo" />
+        <img
+          src="assets/images/nexytech-logo-complete.svg"
+          alt="Nexytech logo"
+        />
+      </div>
+
+      <div class="preloading__progress-bar">
+        <div class="preloading__fill"></div>
+      </div>
+
+      <div class="preloading__wave-bg"></div>
+    </div>
+
     <header class="header">
       <nav class="header__navigation container">
         <div class="header__logo">
