created team content section and when click in navigation links close mobile menu

--- a/index.html
+++ b/index.html
@@ -51,31 +51,31 @@
         <div class="header__menu">
           <ul>
             <li>
-              <a href="#">
+              <a href="#home">
                 <i class="home-icon"></i>
                 <span href="#">Início</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#about">
                 <i class="about-icon"></i>
                 <span href="#">Sobre</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#services">
                 <i class="services-icon"></i>
                 <span href="#">Serviços</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#team">
                 <i class="team-icon"></i>
                 <span href="#">Time</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#testimonials">
                 <i class="testimonial-icon"></i>
                 <span href="#">Depoimentos</span>
               </a>
@@ -251,6 +251,22 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="team">
+        <div class="container">
+          <div class="team__text">
+            <h2 class="team__title">Nosso time</h2>
+            <p class="team__subtitle">Criatividade e Inovação</p>
+          </div>
+
+          <div class="team__image">
+            <img
+              src="assets/images/team-image.png"
+              alt="Equipe da empresa Nexytech"
+            />
           </div>
         </div>
       </section>
