created testimonials content section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
       href="assets/images/nexytech-n-logo.svg"
       type="image/x-icon"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="assets/icons/style.css" />
     <link rel="stylesheet" href="public/css/main.css" />
+    <script
+      src="https://unpkg.com/swiper@8/swiper-bundle.min.js"
+      defer
+    ></script>
+    <script src="src/js/swiper.js" defer></script>
     <script src="src/js/main.js" defer></script>
     <title>Nexytech</title>
   </head>
@@ -267,6 +276,113 @@
               src="assets/images/team-image.png"
               alt="Equipe da empresa Nexytech"
             />
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="testimonials">
+        <div class="container">
+          <h2 class="testimonials__title">
+            O que nossos clientes acham dos nossos serviços ?
+          </h2>
+
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="testimonials__box swiper-slide">
+                <blockquote>
+                  <div class="testimonials__user">
+                    <img
+                      src="assets/images/testimonials-picture-1.jpg"
+                      alt="Foto de Isabella Vieira"
+                    />
+                    <div class="testimonials__user--details">
+                      <cite>Isabella Vieira</cite>
+                      <div class="testimonials__assessment green-color">
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="testimonials__quote">
+                    <i class="quote-icon green-color"></i>
+                  </div>
+
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Non, non ornare sed pulvinar consequat praesent. Tincidunt
+                    facilisis donec
+                  </p>
+                </blockquote>
+              </div>
+
+              <div class="testimonials__box swiper-slide">
+                <blockquote>
+                  <div class="testimonials__user">
+                    <img
+                      src="assets/images/testimonials-picture-2.jpg"
+                      alt="Foto de Samuel Lima"
+                    />
+                    <div class="testimonials__user--details">
+                      <cite>Samuel Lima</cite>
+                      <div class="testimonials__assessment yellow-color">
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="testimonials__quote">
+                    <i class="quote-icon yellow-color"></i>
+                  </div>
+
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Non, non ornare sed pulvinar consequat praesent. Tincidunt
+                    facilisis donec
+                  </p>
+                </blockquote>
+              </div>
+
+              <div class="testimonials__box swiper-slide">
+                <blockquote>
+                  <div class="testimonials__user">
+                    <img
+                      src="assets/images/testimonials-picture-3.jpg"
+                      alt="Foto de Enzo Alves"
+                    />
+                    <div class="testimonials__user--details">
+                      <cite>Enzo Alves</cite>
+                      <div class="testimonials__assessment blue-color">
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                        <i class="star-icon"></i>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="testimonials__quote">
+                    <i class="quote-icon blue-color"></i>
+                  </div>
+
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Non, non ornare sed pulvinar consequat praesent. Tincidunt
+                    facilisis donec
+                  </p>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </section>
