created footer and small header changes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </h1>
 
               <div class="home__button">
-                <a href="#" class="button">
+                <a href="#about" class="button">
                   Saiba mais <i class="straight-arrow-icon"></i>
                 </a>
               </div>
@@ -386,6 +386,98 @@
           </div>
         </div>
       </section>
+
+      <section class="section" id="more">
+        <div class="container">
+          <div class="more__text">
+            <h3 class="more__title">Ficou interessado nos nossos serviços ?</h3>
+            <p class="more__subtitle">
+              Solicite um projeto e faça um orçamento agora mesmo, é fácil e
+              rápido!
+            </p>
+          </div>
+
+          <div class="more__button">
+            <a class="button" href="#">Entrar em contato</a>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__text">
+            <div class="footer__logo">
+              <a href="#">
+                <img
+                  src="assets/images/nexytech-n-logo.svg"
+                  alt="Nexytech logo"
+                />
+                <img
+                  src="assets/images/nexytech-logo-complete.svg"
+                  alt="Nexytech logo"
+                />
+              </a>
+            </div>
+
+            <div class="footer__contact">
+              <div class="footer__address box">
+                <i class="company-icon"></i>
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+
+              <div class="footer__phone box">
+                <i class="phone-icon"></i>
+                <p>11 93472 7483</p>
+              </div>
+
+              <div class="footer__email box">
+                <i class="email-icon"></i>
+                <p>Exemplo@nexytech.com</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__social">
+            <ul>
+              <li>
+                <a
+                  href="https://facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i class="facebook-icon"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i class="instagram-icon"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://linkedin.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i class="linkedin-icon"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__divider"></div>
+
+        <div class="footer__rights">
+          <span
+            >&copy; Copyright 2022 Nexytech. Todos os direitos reservados.</span
+          >
+          <span>Criado por LeonardoYz</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
