small changes in theme switcher button

--- a/index.html
+++ b/index.html
@@ -102,10 +102,14 @@
           </div>
         </div>
 
-        <div class="theme-switcher">
+        <button
+          type="button"
+          class="theme-switcher"
+          aria-label="Botão para trocar tema"
+        >
           <span>Trocar tema</span>
           <i class="moon-icon"></i>
-        </div>
+        </button>
 
         <div class="header__menu--mobile">
           <i class="mobile-menu-icon"></i>
