created contact page

--- a/index.html
+++ b/index.html
@@ -62,43 +62,45 @@
             <li>
               <a href="#home">
                 <i class="home-icon"></i>
-                <span href="#">Início</span>
+                <span>Início</span>
               </a>
             </li>
             <li>
               <a href="#about">
                 <i class="about-icon"></i>
-                <span href="#">Sobre</span>
+                <span>Sobre</span>
               </a>
             </li>
             <li>
               <a href="#services">
                 <i class="services-icon"></i>
-                <span href="#">Serviços</span>
+                <span>Serviços</span>
               </a>
             </li>
             <li>
               <a href="#team">
                 <i class="team-icon"></i>
-                <span href="#">Time</span>
+                <span>Time</span>
               </a>
             </li>
             <li>
               <a href="#testimonials">
                 <i class="testimonial-icon"></i>
-                <span href="#">Depoimentos</span>
+                <span>Depoimentos</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="src/pages/contact.html">
                 <i class="right-curved-arrow"></i>
-                <span href="#">Contato</span>
+                <span>Contato</span>
               </a>
             </li>
           </ul>
 
           <div class="header__button">
-            <a class="button" href="#">Entrar em contato</a>
+            <a class="button" href="src/pages/contact.html"
+              >Entrar em contato</a
+            >
           </div>
         </div>
 
