created back to top button

--- a/index.html
+++ b/index.html
@@ -485,5 +485,10 @@
         </div>
       </div>
     </footer>
+
+    <div class="back-to-top">
+      <a href="#home"><i class="arrow-up-icon"></i></a>
+      <div class="back-to-top__line"></div>
+    </div>
   </body>
 </html>
