--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Empresa referência no mercado de desenvolvimento web e mobile, que entrega aplicações sob demanda."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,7 +43,7 @@
       <div class="preloading__wave-bg"></div>
     </div>
 
-    <header class="header">
+    <header class="header" id="contact-page-header">
       <nav class="header__navigation container">
         <div class="header__logo">
           <a href="../../index.html">
@@ -72,8 +76,8 @@
       </nav>
     </header>
 
-    <div class="contact__background one"></div>
-    <div class="contact__background two"></div>
+    <div class="background one"></div>
+    <div class="background two"></div>
     <section class="contact">
       <div class="contact__container">
         <div class="contact__content">
