made theme switcher

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           aria-label="Botão para trocar tema"
         >
           <span>Trocar tema</span>
-          <i class="moon-icon"></i>
+          <i class="moon-icon" id="switcher-icon"></i>
         </button>
 
         <div class="header__menu--mobile">
