--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -71,7 +71,7 @@
           aria-label="Botão para trocar tema"
         >
           <span>Trocar tema</span>
-          <i class="moon-icon"></i>
+          <i class="moon-icon" id="switcher-icon"></i>
         </button>
       </nav>
     </header>
@@ -163,7 +163,7 @@
             </div>
 
             <div class="contact__submit">
-              <input type="submit" class="button" />
+              <input type="submit" class="button" value="Enviar" />
             </div>
           </form>
         </div>
